exports[`HitsPerPage applies translations 1`] = `
<ul
  className="HitsPerPage">
  <li
    className="HitsPerPage__item HitsPerPage__item--selected">
    <a
      aria-label={undefined}
      className="HitsPerPage__item__link"
      href="#"
      onClick={[Function anonymous]}>
      111
    </a>
  </li>
  <li
    className="HitsPerPage__item">
    <a
      aria-label={undefined}
      className="HitsPerPage__item__link"
      href="#"
      onClick={[Function anonymous]}>
      333
    </a>
  </li>
  <li
    className="HitsPerPage__item">
    <a
      aria-label={undefined}
      className="HitsPerPage__item__link"
      href="#"
      onClick={[Function anonymous]}>
      666
    </a>
  </li>
</ul>
`;

exports[`HitsPerPage supports passing number items 1`] = `
<ul
  className="HitsPerPage">
  <li
    className="HitsPerPage__item HitsPerPage__item--selected">
    <a
      aria-label={undefined}
      className="HitsPerPage__item__link"
      href="#"
      onClick={[Function anonymous]}>
      111
    </a>
  </li>
  <li
    className="HitsPerPage__item">
    <a
      aria-label={undefined}
      className="HitsPerPage__item__link"
      href="#"
      onClick={[Function anonymous]}>
      333
    </a>
  </li>
  <li
    className="HitsPerPage__item">
    <a
      aria-label={undefined}
      className="HitsPerPage__item__link"
      href="#"
      onClick={[Function anonymous]}>
      666
    </a>
  </li>
</ul>
`;

exports[`HitsPerPage supports passing object items 1`] = `
<ul
  className="HitsPerPage">
  <li
    className="HitsPerPage__item HitsPerPage__item--selected">
    <a
      aria-label={undefined}
      className="HitsPerPage__item__link"
      href="#"
      onClick={[Function anonymous]}>
      111 items
    </a>
  </li>
  <li
    className="HitsPerPage__item">
    <a
      aria-label={undefined}
      className="HitsPerPage__item__link"
      href="#"
      onClick={[Function anonymous]}>
      333 items
    </a>
  </li>
  <li
    className="HitsPerPage__item">
    <a
      aria-label={undefined}
      className="HitsPerPage__item__link"
      href="#"
      onClick={[Function anonymous]}>
      666 items
    </a>
  </li>
</ul>
`;
